# ai-scientometer

./: .env.example  .gitignore  LICENSE  README.md  deploy.sh  docker-compose.yml
api/: .dockerignore  Dockerfile  env_example.txt  force_training.py  live_training_monitor.py  monitor.py  pyproject.toml  scientometer.py  test_chat.py
api/datasets/versions/v1.0.2/: metadata.json  papers_20250909_172327.csv
api/datasets/versions/v1.0.4/: metadata.json
docs/: CONTINUOUS_LEARNING_REPORT.md  DEPLOYMENT.md  DEVELOPMENT.md  EXAMPLES.md  QUICK_START.md  SELF_LEARNING_REPORT.md  TRUE_AI_REPORT.md
nginx/: nginx-no-ssl.conf  nginx.conf
nginx/certbot/: README.md
nginx/ssl/: README.md
web/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
web/src/: App.css  App.tsx  index.css
web/src/components/: AIChat.tsx  ControlPanel.tsx  Dashboard.tsx  DataStats.tsx  ModelsList.tsx  TrainingChart.tsx  TrainingMetrics.tsx  TrainingProcess.tsx
web/src/config/: api.ts
