[project]
name = "ai-scientometer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.4",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.5",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "pymongo>=4.15.5",
    "sentence-transformers>=5.2.0",
    "scikit-learn>=1.8.0",
    "numpy>=2.3.5",
    "python-dotenv>=1.2.1",
    "pandas>=2.3.3",
    "joblib>=1.5.3",
    "pyarrow>=22.0.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "tensorboard>=2.20.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[tool.uv]
resolution = "highest"

[dependency-groups]
dev = ["ruff>=0.14.9"]

[tool.ruff]
target-version = "py314"
# lint.select = ["ALL"]
lint.fixable = ["ALL"]
lint.ignore = [
    "F401",
    "COM812",  # missing trailing comma (stylistic, optional)
    "DTZ005",  # datetime.now() used without tzinfo (not always relevant)
    "T20",     # flake8-print (allow print statements for debugging/logging)
    "TC002",   # type checking import block placement
    "TC001",   # type checking import not at top of file
    "TC003",   # type checking import formatting
    "PLR2004", # magic value used in comparison (often acceptable)
    "D",       # all docstring-related rules disabled
    "D100",    # missing docstring in public module
    "S101",    # Use of `assert` detected
    "TD002",   # Missing author in TODO;
]

format.quote-style = "double"
